# metal-toyrenderer

./: .gitignore  Application.h  Application.mm  BufferLayout.h  CMakeLists.txt  IndexBuffer.mm  README.md  RenderCommand.h  RenderCommand.mm  Renderer.h  Renderer.mm  Shader.h  Shader.mm  Texture.h  Texture.mm  VertexBuffer.h  VertexBuffer.mm  main.mm
Assets/Shaders/: blueandlit.metal  renderer2d.metal  whiteShader.metal
OldGarbageCode/: Application.h  Application.mm  Core.h  Core.mm
Renderer/: FrameBuffer.h  FrameBuffer.mm  RenderCommand.h  RenderCommand.mm  Renderer.h  Renderer.mm  Renderer2D.h  Renderer2D.mm  Shader.h  Shader.mm  Texture.h  Texture.mm  VertexBuffer.h  VertexBuffer.mm
SandBox/: CMakeLists.txt  SandBox2D.cpp  SandBox2D.h  SandBox2D.mm  SandboxApp.mm  imgui.ini
SandBox/Assets/Shaders/: blueandlit.metal  whiteShader.metal
Shaders/: blueShader.metal  whiteShader.metal  whiteShader.mm
ToyEngine/: CMakeLists.txt
ToyEngine/Core/: Application.h  Application.mm  Base.h  EntryPoint.h  Input.h  Input.mm  KeyCodes.h  Layer.h  Layer.mm  LayerStack.h  LayerStack.mm  Math.cpp  Math.h  Time.h  Timestep.h  Timestep.mm
ToyEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
ToyEngine/Renderer/: BufferLayout.h  Camera.h  EditorCamera.h  EditorCamera.mm  FrameBuffer.h  FrameBuffer.mm  IndexBuffer.h  IndexBuffer.mm  InitMetal.h  InitMetal.mm  OrthoCamera.h  OrthoCamera.mm  OrthoCameraController.h  OrthoCameraController.mm  RenderCommand.h  RenderCommand.mm  Renderer.h  Renderer.mm  Renderer2D.h  Shader.h  Shader.mm  Swapchain.h  Swapchain.mm  Texture.h  Texture.mm  UniformBuffer.h  UniformBuffer.mm  VertexBuffer.h  VertexBuffer.mm
ToyEngine/Renderer/IMGUI/: ImGuiDock.h  ImGuiDock.mm  ImGuiLayer.h  ImGuiLayer.mm
ToyEngine/Window/: Window.h  Window.mm
Window/: Window.h  Window.mm
